--- a/assets/css/customise.css
+++ b/assets/css/customise.css
@@ -52,9 +52,18 @@
 	color: #fff !important;
 }
 
+.lead{
+	font-size: 18px !important;
+}
+
 .Services {
 	background: #23334e;
 }
+
+.text-primary-pro{
+	color: #23334e;
+}
+
 
 .Service-card {
 	box-shadow: 0px 0px 3px 0px #00000027;
