--- a/assets/css/customise.css
+++ b/assets/css/customise.css
@@ -230,16 +230,34 @@ Optional: Overlay for better text contrast */
 /* Responsive screen code here */
 
 /* Large screens (≥768px): nav-link should be white */
-@media (min-width: 768px) {
+
+
+
+@media (min-width: 1023px) {
 	.navbar-nav .nav-link {
-		color: #fff !important;
+		color: #ffffff  !important;
+	}
+
+	/* .navbar-nav .nav-link:hover,
+	.navbar-nav .nav-link:focus {
+		color: #23334e !important;
+	} */
+}
+@media (max-width: 1024px) {
+	/* .navbar-nav .nav-link {
+		color: #337ab7  !important;
 	}
 
 	.navbar-nav .nav-link:hover,
 	.navbar-nav .nav-link:focus {
-		color: #57a7ec !important;
+		color: #23334e !important;
+	} */
+
+	.main-nav{
+		display: block !important;
 	}
 }
+
 
 @media (max-width: 767.99px) {
 	.navbar-nav .nav-link {
@@ -251,3 +269,4 @@ Optional: Overlay for better text contrast */
 		color: #23334e !important;
 	}
 }
+
